--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <html>
 
     <head>
+        <!-- Meta Tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,8 +18,14 @@
         <!--Customized CSS Styling-->
         <link href="css/style.css" rel="stylesheet" >
 
-        <!-- Bootstrap core CSS -->
-        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap Core CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+        <!-- Bootstrap Core Files -->
+        jQuery, Popper.js, and Bootstrap JS
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
     </head>
 
@@ -37,18 +44,18 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="index.html">Home
                     <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Books</a>
+                    <a class="nav-link" href="books.html">Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="contact-us.html">Contact Us</a>
                 </li>
                 </ul>
             </div>
@@ -73,7 +80,7 @@
                         <img class="card-img-top" src="http://placehold.it/500x325" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Front-End Frameworks</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, </p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -86,7 +93,7 @@
                         <img class="card-img-top" src="http://placehold.it/500x325" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Database Essentials</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -99,7 +106,7 @@
                         <img class="card-img-top" src="http://placehold.it/500x325" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Development Life Cycle</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet,</p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -112,7 +119,7 @@
                         <img class="card-img-top" src="http://placehold.it/500x325" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Front-EndEssentials</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet,</p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Find Out More!</a>
