--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+
         <!--jQuery, Popper.js, and Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -138,8 +139,40 @@
          <!-- Footer -->
         <footer class="py-5 bg-dark">
             <div class="container">
-                <p class="m-0 text-center text-white">&copy; WalkaBooks Copyright 2020</p>
-            </div>
+                <div class="col-md-3">
+                    <h2>About Us</h2>
+                    <li><a href="#">Who We Are</a></li>
+                    <li><a href="#">Our Store</a></li>
+                    <li><a href="#">Stores Near to Me</a></li>
+                </div><!--End of first footer column-->
+
+                <div class="col-md-3">
+                    <h2>Customer Care</h2>
+                    <li><a href="#">Gift Cards</a></li>
+                    <li><a href="#">Ordering</a></li>
+                    <li><a href="#">Payment</a></li>
+                    <li><a href="#">Shipping</a></li>
+                    <li><a href="#">Returns</a></li>
+                </div><!--End of second footer column-->
+
+                <div class="col-md-3">
+                    <h2>Lorem Ipsum</h2>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                </div><!--End of third footer column-->
+
+                <div class="col-md-3">
+                    <h2>Contact Us</h2>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10410.510865752853!2d-123.1152548!3d49.2834511!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4e03bf432e66714!2sBCIT%20Downtown%20Campus!5e0!3m2!1sen!2sca!4v1602882765225!5m2!1sen!2sca" width="500" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div><!--End of fourth footer column-->
+
+                <p class="m-0 text-center text-white">Copyright &copy; WalkaBooks 2020</p>
+
+            </div> <!-- End of Container-->
+
         </footer>
         <!-- End of Footer -->
 
