Finished coding footer section

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <li><a href="#">Who We Are</a></li>
                     <li><a href="#">Our Store</a></li>
                     <li><a href="#">Stores Near to Me</a></li>
-                </div><!--End of first footer column-->
+                </div><!--End of the First Footer Column-->
 
                 <div class="col-md-3">
                     <h2>Customer Care</h2>
@@ -153,26 +153,28 @@
                     <li><a href="#">Payment</a></li>
                     <li><a href="#">Shipping</a></li>
                     <li><a href="#">Returns</a></li>
-                </div><!--End of second footer column-->
+                </div><!--End of the Second Footer Column-->
 
                 <div class="col-md-3">
-                    <h2>Lorem Ipsum</h2>
-                    <li><a href="#">Lorem Ipsum</a></li>
-                    <li><a href="#">Lorem Ipsum</a></li>
-                    <li><a href="#">Lorem Ipsum</a></li>
-                </div><!--End of third footer column-->
+                    <h2>Social Media</h2>
+                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </div><!--End of the Third Footer Column-->
 
                 <div class="col-md-3">
                     <h2>Contact Us</h2>
-                    <li><a href="#">Returns</a></li>
-                    <li><a href="#">Returns</a></li>
+                    <li><a href="#"><img src="http://placehold.it/48x48"></a></li> <br/>
+                    <li><a href="#"><img src="http://placehold.it/48x48"></a></li> <br/>
+                    <li><a href="#"><img src="http://placehold.it/48x48"></a></li> <br/>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10410.510865752853!2d-123.1152548!3d49.2834511!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4e03bf432e66714!2sBCIT%20Downtown%20Campus!5e0!3m2!1sen!2sca!4v1602882765225!5m2!1sen!2sca" width="500" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div><!--End of fourth footer column-->
-
-                <p class="m-0 text-center text-white">Copyright &copy; WalkaBooks 2020</p>
-
+                </div><!--End of the Fourth Footer Column-->
             </div> <!-- End of Container-->
 
+            <div class="copyright">
+                <p class="m-0 text-center text-white">Copyright &copy; WalkaBooks 2020<br/> Terms & Conditions | Privacy Policy | Site Map </p> 
+            <div> <!-- End of Copyright -->
         </footer>
         <!-- End of Footer -->
 
