--- a/about-us.html
+++ b/about-us.html
@@ -60,11 +60,9 @@
             </div>
         </nav>
 
-        <br/>
-
         <!-- Page Content -->
         <div class="container">
-            <div class="search-bar">
+            <!-- <div class="search-bar">
                 <form class="form-inline">
                     <div> 
                         <h5>Search Books</h5> 
@@ -76,9 +74,28 @@
                         </div>
                     </div>
                 </form>
+            </div> --> <!--End of Search Bar--> 
+
+            <br/>
+
+             <!-- Banner -->
+            <div class="banner">
+                <img src="http://placehold.it/1100x200/?text=Banner">
             </div>
 
             <br/>
+
+            <div class="row">
+                <div class="col-md-8">
+                    <h2>About Us</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="http://placehold.it/500x325?text=Photo" class="card-img-top" alt="About Us">
+                </div>
+              </div>
 
         </div> <!-- End of Page Content-->
 
