--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
-
         
         <title>WALKABOOKS</title>
 
@@ -20,7 +19,6 @@
 
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
 
         <!--jQuery, Popper.js, and Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -71,6 +69,24 @@
                 <p class="lead">Your one-stop shop of full-stack development resources</p>
                 <!-- <a href="#" class="btn btn-primary btn-lg"></a> -->
             </header>
+
+            <div class="search-bar">
+                <form class="form-inline">
+                    <div> 
+                        <h5>Search Books</h5> 
+                    </div>
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">Go!</span>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="card-title text-center">
+                <h1>Popular Books</h1>
+            </div>
 
             <!-- Page Features -->
             <div class="row text-center">
@@ -129,10 +145,8 @@
                         </div>
                     </div>
                 </div>
-    
             </div>
             <!-- End of Page Features -->
-
         </div>
         <!-- End of Page Content -->
 
@@ -173,7 +187,8 @@
             </div> <!-- End of Container-->
 
             <div class="copyright">
-                <p class="m-0 text-center text-white">Copyright &copy; WalkaBooks 2020<br/> Terms & Conditions | Privacy Policy | Site Map </p> 
+                <p class="m-0 text-center text-white">Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br/> 
+                    <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a></p> 
             <div> <!-- End of Copyright -->
         </footer>
         <!-- End of Footer -->
