--- a/books.html
+++ b/books.html
@@ -14,7 +14,7 @@
         <title>WALKABOOKS</title>
 
         <!--Customized CSS Styling-->
-        <link href="css/style.css" rel="stylesheet" >
+        <link href="css/main.css" rel="stylesheet" >
 
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
