Updated Home(index) Page with the Photos

--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
             </div>
         </nav>
 
+        <br/>
         <!-- Page Content -->
         <div class="container">
 
             <!-- Jumbotron Header -->
             <header class="jumbotron my-4">
+                <div class="banner">
+                    <img src="images/banner.jpg" alt="banner">
+                </div>
                 <h1 class="display-3">Shape Your Ideas!</h1>
                 <p class="lead">Your one-stop shop of full-stack development resources</p>
                 <!-- <a href="#" class="btn btn-primary btn-lg"></a> -->
@@ -93,10 +97,10 @@
                 <!-- First Card Starts -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                        <img class="card-img-top" src="images/Database_Development_For_Dummies.webp" alt="Database Development For Dummies">
                         <div class="card-body">
-                            <h4 class="card-title">Front-End Frameworks</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, </p>
+                            <h4 class="card-title">Database Development For Dummies</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -107,9 +111,9 @@
                 <!-- Second Card Starts -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                        <img class="card-img-top" src="images/Essentials_of_Web_Database_Development.png" alt="Essentials of Web Database Development">
                         <div class="card-body">
-                            <h4 class="card-title">Database Essentials</h4>
+                            <h4 class="card-title">Essentials of Web Database Development</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="card-footer">
@@ -121,10 +125,10 @@
                 <!-- Third Card Starts -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                        <img class="card-img-top" src="images/Front_End_Development.webp" alt="Front End Development">
                         <div class="card-body">
-                            <h4 class="card-title">Development Life Cycle</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet,</p>
+                            <h4 class="card-title">Front End Development</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -135,10 +139,10 @@
                 <!-- Fourth Card Starts -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                        <img class="card-img-top" src="images/Professional_Front_End_Architecture.png" alt="Professional Front End Architecture">
                         <div class="card-body">
-                            <h4 class="card-title">Front-EndEssentials</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet,</p>
+                            <h4 class="card-title">Professional Front End Architecture</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -193,6 +197,7 @@
         </footer>
         <!-- End of Footer -->
 
+        <!--Customized Javascript-->
         <script src="js/script.js" async defer></script>
     </body>
 </html>
