Updated Home Page

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                 <!-- Second Card Starts -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="images/Essentials_of_Web_Database_Development.png" alt="Essentials of Web Database Development">
+                        <img class="card-img-top" src="images/Front_End_Developer.jpg" alt="Front_End_Developer">
                         <div class="card-body">
-                            <h4 class="card-title">Essentials of Web Database Development</h4>
+                            <h4 class="card-title">Front End Developer</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <div class="card-footer">
