Updated Books Page with Images

--- a/books.html
+++ b/books.html
@@ -84,73 +84,78 @@
                 <aside class="col-md-4 book-sidebar text-white bg-info rounded">
                     <h3 class="text-center">Select Sections</h3>
                     <div class="p-4 mb-3 ">
-                        <h4>Front End Essentials</h4>
+                        <h4>For Beginners</h4>
+                        <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                        <br/>
                         <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
                     </div>
             
                     <div class="p-4">
-                        <h4 >Development Life Cycle</h4>
+                        <h4 >Database Essentials</h4>
+                        <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                        <br/>
                         <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
                     </div>
                 </aside><!-- End of Book Sidebar -->
 
+                <!-- Book Display Rows-->
                 <div class="col-md-8 book-main">
                     <div class="book-display">
-                        <h3 class="book-display-title">Front End Essentials</h3> 
+                        <h3 class="book-display-title">For Beginners</h3> 
                         
                         <div class="card-deck">
                             <div class="card">
-                                <img src="http://placehold.it/500x325" class="card-img-top" alt="Front-End Frameworks">
+                                <img src="images/Coding_for_Beginners.jpg" class="card-img-top" alt="Front-End Frameworks">
                                 <div class="card-body">
-                                    <h6 class="card-title">Front-End Frameworks</h6>
+                                    <h6 class="card-title">Coding for Codingfor Beginners</h6>
                                     <p class="card-text">$25</p>
                                 <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
                             </div>
                             <div class="card">
-                                <img src="http://placehold.it/500x325" class="card-img-top" alt="Front-End Database">
+                                <img src="images/Javascript_for_Beginners.jpg" class="card-img-top" alt="Front-End Database">
                                 <div class="card-body">
-                                    <h6 class="card-title">Front-End Database</h6>
+                                    <h6 class="card-title">Javascript for Beginners</h6>
                                     <p class="card-text">$30</p>
                                     <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
                             </div>
                             <div class="card">
-                                <img src="http://placehold.it/500x325" class="card-img-top" alt="Front-End Book">
+                                <img src="images/SQL_Programming_For_Beginners.png" class="card-img-top" alt="Front-End Book">
                                 <div class="card-body">
-                                    <h6 class="card-title">Front-End Book</h6>
+                                    <h6 class="card-title">SQL Programming For Beginners</h6>
                                     <p class="card-text">$25</p>
                                     <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
                             </div>
-                        </div> <!-- End of Card-Deckk -->
+                        </div> <!-- End of Card-Deck -->
                     </div><!-- End of First Row's Book Display -->
 
                     <br/>
 
                     <div class="book-display">
-                        <h3 class="book-display-title">Development Life Cycles</h3>
+                        <h3 class="book-display-title">Database Essentials</h3>
                         <div class="card-deck">
                             <div class="card">
-                                <img src="http://placehold.it/500x325" class="card-img-top" alt="Development Life Cycle">
+                                <img src="images/Database_Management_System.jpg" class="card-img-top" alt="Database_Management_System">
                                 <div class="card-body">
-                                    <h6 class="card-title">Development Life Cycle</h6>
+                                    <h6 class="card-title">Database Management System</h6>
                                     <p class="card-text">$25</p>
                                     <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
                             </div>
                             <div class="card">
-                                <img src="http://placehold.it/500x325" class="card-img-top" alt="Development Life">
+                                <img src="images/Sql_Database_Programming.jpg" class="card-img-top" alt="Sql_Database_Programming">
                                 <div class="card-body">
-                                    <h6 class="card-title">Development Life </h6>
+                                    <h6 class="card-title">SQL Database Programming</h6>
                                     <p class="card-text">$30</p>
                                     <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
                             </div>
                             <div class="card">
-                                <img src="http://placehold.it/500x325" class="card-img-top" alt="Front-End Book">
+                                <img src="images/Essentials_of_Web_Database_Development.png" class="card-img-top" alt="Essentials_of_Web_Database_Development">
                                 <div class="card-body">
-                                    <h6 class="card-title">Front-End Book</h6>
+                                    <h6 class="card-title">Essential of Web Database Development</h6>
                                     <p class="card-text">$25</p>
                                     <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
@@ -205,7 +210,7 @@
             <div> <!-- End of Copyright -->
         </footer> <!-- End of Footer -->
 
-        <!--Customized JS -->>
+        <!--Customized JS -->
         <script src="js/script.js" async defer></script>
     </body>
 </html>    
