--- a/books.html
+++ b/books.html
@@ -107,7 +107,7 @@
                             <div class="card">
                                 <img src="images/Coding_for_Beginners.jpg" class="card-img-top" alt="Front-End Frameworks">
                                 <div class="card-body">
-                                    <h6 class="card-title">Coding for Codingfor Beginners</h6>
+                                    <h6 class="card-title">Coding for Beginners</h6>
                                     <p class="card-text">$25</p>
                                 <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
