index updated, partials added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <![endif]-->
 
     <!-- Top Navigation Menu -->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -157,31 +157,34 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            
             <div class="about-footer">
                 <h2>About Us</h2>
+                <ul>
                 <li><a href="#">Who We Are</a></li>
                 <li><a href="#">Our Store</a></li>
                 <li><a href="#">Stores Near to Me</a></li>
-            </div>
+            </ul>
+        </div>
             <!--End of the First Footer Column-->
 
             <div class="cart-footer">
                 <h2>Customer Care</h2>
+                <ul>
                 <li><a href="#">Gift Cards</a></li>
                 <li><a href="#">Ordering</a></li>
                 <li><a href="#">Payment</a></li>
                 <li><a href="#">Shipping</a></li>
                 <li><a href="#">Returns</a></li>
+            </ul>
             </div>
             <!--End of the Second Footer Column-->
 
             <div class="social-footer">
-                <h2>Social Media</h2>
-                <i class="fa fa-facebook-square" style="font-size:40px"></i>
-                <i class="fa fa-linkedin-square" style="font-size:40px"></i>
-                <i class="fa fa-twitter-square" style="font-size:40px"></i>
-                <br>
-                <br>
+                <h2>Follow us</h2>
+                <a href="#"><i class="fa fa-facebook-square" style="font-size:40px"></i></a>
+                <a href="#"><i class="fa fa-linkedin-square" style="font-size:40px"></i></a>
+                <a href="#"><i class="fa fa-twitter-square" style="font-size:40px"></i></a>
 
             </div>
             <!--End of the Third Footer Column-->
@@ -189,9 +192,9 @@
             <div class="contact-us-footer">
                 <ul class="contact">
                     <h2>Contact Us</h2>
-                    <i class="fa fa-envelope" style="font-size:40px"></i>
-                    <i class="fa fa-phone" style="font-size:40px"></i>
-                    <i class="fa fa-map-marker" style="font-size:40px"></i>
+                    <li><a href="#"><i class="fa fa-envelope" style="font-size:40px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-phone" style="font-size:40px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-map-marker" style="font-size:40px"></i></a></li>
                 </ul>
             </div>
             <br>
@@ -199,8 +202,8 @@
             <br>
             <div class="map">
                 <h2>1111, Seymor Street, Vancouver, BC</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10410.510865752853!2d-123.1152548!3d49.2834511!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4e03bf432e66714!2sBCIT%20Downtown%20Campus!5e0!3m2!1sen!2sca!4v1602882765225!5m2!1sen!2sca" width="375"
-                    height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10410.510865752853!2d-123.1152548!3d49.2834511!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4e03bf432e66714!2sBCIT%20Downtown%20Campus!5e0!3m2!1sen!2sca!4v1602882765225!5m2!1sen!2sca" width="230"
+                    height="100" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
 
         </div>
