Added Dropdown Search Form on the Sidebar

--- a/books.html
+++ b/books.html
@@ -83,6 +83,15 @@
             <div class="row">
                 <aside class="col-md-4 book-sidebar text-white bg-info rounded">
                     <h3 class="text-center">Select Sections</h3>
+                    <form id="search-form">
+                        <div class="form-group">
+                            <select id="dropdown" name="selection" class="form-control" required>
+                            <option disabled selected value>Select Your Option</option>
+                            <option value="for_beginners">For Beginners</option>
+                            <option value="univercity-student">Database Essentials</option>
+                            </select>
+                        </div>  
+                    </form> 
                     <div class="p-4 mb-3 ">
                         <h4>For Beginners</h4>
                         <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
@@ -107,7 +116,7 @@
                             <div class="card">
                                 <img src="images/Coding_for_Beginners.jpg" class="card-img-top" alt="Front-End Frameworks">
                                 <div class="card-body">
-                                    <h6 class="card-title">Coding for Codingfor Beginners</h6>
+                                    <h6 class="card-title">Coding for Beginners</h6>
                                     <p class="card-text">$25</p>
                                 <a href="#" class="btn btn-primary">Add to Cart</a>
                                 </div>
