Added Dropdown Search Form in the Sidebar

--- a/books.html
+++ b/books.html
@@ -88,7 +88,7 @@
                             <select id="dropdown" name="selection" class="form-control" required>
                             <option disabled selected value>Select Your Option</option>
                             <option value="for_beginners">For Beginners</option>
-                            <option value="univercity-student">Database Essentials</option>
+                            <option value="database_essentials">Database Essentials</option>
                             </select>
                         </div>  
                     </form> 
@@ -215,7 +215,7 @@
 
             <div class="copyright">
                 <p class="m-0 text-center text-white">Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br/> 
-                    <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a></p> 
+                    <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a> | <a href="credits.html">Photo Credits</a></p> 
             <div> <!-- End of Copyright -->
         </footer> <!-- End of Footer -->
 
