--- a/registration.html
+++ b/registration.html
@@ -94,18 +94,18 @@
     <div class="d-flex m-5 p-5">
       <!--Register form-->
       <!---------------------------------------------------------------------------------------------->
-      <div class="container-fluid m-10 pt-5">
+      <div class="container-fluid m-10 pt-5 w-50">
         <h2 class="font-weight-bold">Register</h2>
 
         <form class="p-top-2">
           <div class="form-group row">
-            <label for="inputFirstName" class="col-sm-2 col-form-label"
+            <label for="inputFirstName" class="col-form-label"
               >First Name</label
             >
             <div class="col-sm-10">
               <input
                 type="text"
-                class="form-control"
+                class="form-control w-sm-100 w-lg-50 w-md-100"
                 id="inputFirstName"
                 placeholder="Enter your First Name"
               />
@@ -187,41 +187,46 @@
 
       <!--Login form-->
       <!---------------------------------------------------------------------------------------------->
-      <div class="container-fluid m-10 pt-5">
-        <h2 class="font-weight-bold">Log In</h2>
-        <form>
-          <div class="form-group row">
-            <label for="inputUser" class="col-sm-2 col-form-label"
-              >Username</label
-            >
-            <div class="col-sm-10">
-              <input
-                type="password"
-                class="form-control"
-                id="inputUser"
-                placeholder="Enter your Username"
-              />
+
+      <div
+        class="d-flex flex-column container-fluid m-10 pt-5 border justify-content-center"
+      >
+        <div>
+          <h2 class="font-weight-bold">Log In</h2>
+          <form>
+            <div class="form-group row">
+              <label for="inputUser" class="col-sm-2 col-form-label"
+                >Username</label
+              >
+              <div class="col-sm-10">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="inputUser"
+                  placeholder="Enter your Username"
+                />
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputPassword" class="col-sm-2 col-form-label"
-              >Password</label
-            >
-            <div class="col-sm-10">
-              <input
-                type="password"
-                class="form-control"
-                id="inputPassword"
-                placeholder="Enter your Password"
-              />
+            <div class="form-group row">
+              <label for="inputPassword" class="col-sm-2 col-form-label"
+                >Password</label
+              >
+              <div class="col-sm-10">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="inputPassword"
+                  placeholder="Enter your Password"
+                />
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <div class="form-button col-sm-12">
-              <button type="submit" class="btn btn-primary">Log in</button>
+            <div class="form-group row">
+              <div class="form-button col-sm-12">
+                <button type="submit" class="btn btn-primary">Log in</button>
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
       <!---------------------------------------------------------------------------------------------->
     </div>
