fixed centering issue

--- a/registration.html
+++ b/registration.html
@@ -99,13 +99,13 @@
 
         <form class="p-top-2">
           <div class="form-group row">
-            <label for="inputFirstName" class="col-form-label"
+            <label for="inputFirstName" class="col-sm-2 col-form-label"
               >First Name</label
             >
             <div class="col-sm-10">
               <input
                 type="text"
-                class="form-control w-sm-100 w-lg-50 w-md-100"
+                class="form-control"
                 id="inputFirstName"
                 placeholder="Enter your First Name"
               />
@@ -189,7 +189,7 @@
       <!---------------------------------------------------------------------------------------------->
 
       <div
-        class="d-flex flex-column container-fluid m-10 pt-5 border justify-content-center"
+        class="d-flex flex-column container-fluid m-10 pt-5 justify-content-center w-50"
       >
         <div>
           <h2 class="font-weight-bold">Log In</h2>
