--- a/registration.html
+++ b/registration.html
@@ -201,7 +201,7 @@
               <div class="col-sm-10">
                 <input
                   type="password"
-                  class="form-control"
+                  class="form-control w-50"
                   id="inputUser"
                   placeholder="Enter your Username"
                 />
