Update html pages

--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
          <!-- Top Navigation Menu -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-            <a class="navbar-brand" href="#">WALKABOOKS</a>
+            <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -141,7 +141,7 @@
 
             <div class="copyright">
                 <p class="m-0 text-center text-white">Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br/> 
-                    <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a></p> 
+                    <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a> | <a href="credits.html">Photo Credits</a></p> 
             <div> <!-- End of Copyright -->
         </footer>
         <!-- End of Footer -->
