--- a/contact-us.html
+++ b/contact-us.html
@@ -30,7 +30,7 @@
          <!-- Top Navigation Menu -->
          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
            <div class="container">
-             <a class="navbar-brand" href="#">WALKABOOKS</a>
+             <a class="navbar-brand" href="index.html">WALKABOOKS</a>
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
               </button>
@@ -130,8 +130,8 @@
                 </div> <!-- End of Container-->
                 <div class="copyright">
                     <p class="m-0 text-center text-white">Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br/> 
-                        <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a></p> 
-                    </div> <!-- End of Copyright -->
+                        <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a> | <a href="credits.html">Photo Credits</a></p> 
+                <div> <!-- End of Copyright -->
                 </footer>
                 <!-- End of Footer -->
                 <script src="js/script.js" async defer></script>
