Updated user and shopping cart's icons

--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,7 @@
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">WALKABOOKS</a>
+            <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,6 +46,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact-us.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registration.html"><i class="fa fa-user-circle" style="font-size: 32px"></i>Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart" style="font-size: 32px"></i></a>
                     </li>
                 </ul>
             </div>
@@ -311,7 +317,7 @@
         <!-- Copyright-->
         <div class="copyright">
             <p class="m-0 text-center text-white">Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br/>
-                <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a></p>
+                <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a> |<a href="credits.html">Photo Credits</a></p>
         </div>
         <!-- End of Copyright -->
     </footer>
