--- a/registration.html
+++ b/registration.html
@@ -309,14 +309,15 @@
 
       <!-- Copyright-->
       <div class="copyright">
-        <p class="m-0 text-center text-white"
-          >Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br />
-          <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
-          <a href="#"> Site Map |<a href="credits.html">Photo Credits</a></p
-        >
+          <p class="m-0 text-center text-white">
+              Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br />
+              <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
+              <a href="#"> Site Map |<a href="credits.html">Photo Credits</a> 
+          </p>
       </div>
       <!-- End of Copyright -->
     </footer>
     <!-- End of Footer -->
-    <script src="js/script.js" async defer></script> </body
+    <script src="js/script.js" async defer></script> 
+    </body
 ></html>
