--- a/cart.html
+++ b/cart.html
@@ -76,7 +76,7 @@
 
                             <h5 class="mb-4">Cart (<span>2</span> items)</h5>
 
-                            <div class="row mb-4">
+                            <div class="row mb-4 hide-item-1">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
                                     <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
                                         <img class="img-fluid w-100" src="images/Coding_for_Beginners.jpg" alt="coding for beginners">
@@ -104,7 +104,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div>
-                                                <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
+                                                <a href="#!" type="button" class="rm-btn-1 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                   class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                 <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
                                   class="fas fa-heart mr-1"></i> Move to wish list </a>
@@ -120,14 +120,14 @@
 
 
 
-                                    <div class="row mb-4">
+                                    <div class="row mb-4 hide-item-2">
                                         <div class="col-md-5 col-lg-3 col-xl-3">
                                             <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
                                                 <img class="img-fluid w-100" src="images/Database_Development_For_Dummies.webp" alt="Database Development">
 
                                             </div>
                                         </div>
-                                        <div class="col-md-7 col-lg-9 col-xl-9">
+                                        <div class="col-md-7 col-lg-9 col-xl-9 hidetest2">
                                             <div>
                                                 <div class="d-flex justify-content-between">
                                                     <div>
@@ -148,7 +148,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" class="rm-btn-2 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                         <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
